# python-sql-to-spreadsheet

./: .gitignore  README.md  pyproject.toml  sampledb.sqlite3  secrets.json.sample
src/: main.py
