[tool.poetry]
name = "python-sql-to-spreadsheet"
version = "0.1.0"
description = ""
authors = ["lycheejam <lycheejamwow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.44"
PyMySQL = "^1.0.2"
google-auth = "^2.15.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
